Fixed an issue on mobile Samsung Internet browsers

--- a/app/static/CSS/mobile.css
+++ b/app/static/CSS/mobile.css
@@ -7,6 +7,7 @@
 body {
     margin: 0;
     overflow: hidden;
+    position: fixed; /* For Samsung Internet browser */
     font-family: 'Roboto Mono', "monospace";
 }
 
